# vgmplayer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  ltc6903.c  ltc6903.h  main.c  vgmcb.c  vgmcb.h  ym2151.pio
cad/: case-Body.stl  case-PartFront.3mf  case-PartFront.stl  case.FCStd
firmware/: CMakeLists.txt  Makefile  main.c  pico.sh  vgmcb.c  vgmcb.h  ym2151.pio
firmware/debug/interface/: ft232h-module-swd.cfg
hardware/: .gitignore
hardware/gb_board/: gb_board.kicad_pcb  gb_board.kicad_pro  gb_board.kicad_sch  rp2040.kicad_sch  sym-lib-table
hardware/libraries/: vgmplayer.kicad_sym
hardware/libraries/vgmplayer.pretty/: 503398-1892_MOL.kicad_mod  Adafruit_FT232H_Breakout.kicad_mod  Adafruit_Micro-SD_Card_Breakout.kicad_mod  AudioJack4.kicad_mod  FLIPCHIP16_STM.kicad_mod  W25Q16JVUXIQ_WIN.kicad_mod  XTAL_ABM3_ABR.kicad_mod
hardware/module_board/: YM_Output.kicad_sch  fp-lib-table  module_board.kicad_pcb  module_board.kicad_pro  module_board.kicad_sch
hardware/module_board/gerber/: module_board-B_Cu.gbr  module_board-B_Mask.gbr  module_board-B_Silkscreen.gbr  module_board-Edge_Cuts.gbr  module_board-F_Cu.gbr  module_board-F_Mask.gbr  module_board-F_Silkscreen.gbr  module_board-NPTH.drl  module_board-PTH.drl  module_board-job.gbrjob
lib/ltc6903/: CMakeLists.txt  ltc6903.c  ltc6903.h
lib/vgm/: CMakeLists.txt  vgm.c  vgm.h
notes/: pins.txt  pio-ideas.txt  rp2040.txt  vgm-timing.md
